force-app/main/default/objects/CventEvents__EventInvitationConfiguration__c/fields/CventEvents__ConfigurationStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ConfigurationStub__c</fullName>
    <externalId>true</externalId>
    <label>Configuration Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>