force-app/main/default/objects/CventEvents__EventInvitationConfiguration__c/fields/CventEvents__EmailDisplayName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__EmailDisplayName__c</fullName>
    <label>Email Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>