force-app/main/default/objects/CventEvents__EventInvitationConfiguration__c/fields/CventEvents__EmailName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__EmailName__c</fullName>
    <label>Email Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>