force-app/main/default/objects/CventEvents__EventInvitationConfiguration__c/fields/CventEvents__EmailStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__EmailStub__c</fullName>
    <label>Email Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>