force-app/main/default/objects/CventEvents__EventInvitationConfiguration__c/fields/CventEvents__EventStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__EventStub__c</fullName>
    <externalId>true</externalId>
    <label>Event Stub</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>