force-app/main/default/objects/CventEvents__EventInvitationConfiguration__c/fields/CventEvents__ListName__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ListName__c</fullName>
    <label>List Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>