force-app/main/default/objects/CventEvents__EventInvitationConfiguration__c/fields/CventEvents__ListStub__c.field-meta.xml
<CustomField>
    <fullName>CventEvents__ListStub__c</fullName>
    <label>List Stub</label>
    <length>36</length>
    <type>Text</type>
</CustomField>